# pyglossary-kindle-test

./: .gitignore  pyproject.toml
pyglossary_kindle_test/: edit_dictionary.py
tests/: test_pyglossary_kindle_test.py
