[tool.poetry]
name = "pyglossary-kindle-test"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglossary = {git = "https://github.com/Vuizur/pyglossary"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
